# hostsmate

./: .gitignore  README.md  anacron_job_setter.sh  cron_job_setter.sh  dev-requirements.txt  hostsmate.py  requirements.txt  setup.cfg
.github/actions/: action_pytest.yml
.github/workflows/: code_validation.yml  flake8.yml  main.yml  pytest.yml  setup.yml
.workflows/: tests.yml
hostsmate/: autorunner.py  domains_extractor.py  formatter.py  hosts_file_updater.py  logger.py  raw_hosts_collector.py  suspender.py  sys_hosts_file.py  system_hosts_file.py  unique_blacklisted_domains.py  writer.py
hostsmate/autorunner/: autorunner.py
hostsmate/cli/: ask_user.py  cli_method_executor.py  parser.py  prompt.py
hostsmate/formatter/: formatter.py
hostsmate/hosts_file_updater/: hosts_file_updater.py
hostsmate/logger/: logger.py
hostsmate/raw_hosts_collector/: raw_hosts_collector.py
hostsmate/sources/: blacklist_sources.py  sources.py  whitelist_sources.py
hostsmate/suspender/: suspender.py
hostsmate/tests/: autorunner_test.py  domains_extractor_test.py  suspender_test.py  system_hosts_file_test.py
hostsmate/utils/: data_utils.py  logging_utils.py  os_utils.py  str_utils.py  utils.py
hostsmate/writer/: writer.py
khostman/autorunner/: autorunner.py
khostman/cli/: ask_user.py  parser.py  prompt.py
khostman/formatter/: formatter.py
khostman/hosts_file_updater/: hosts_file_updater.py
khostman/logger/: logger.py
khostman/raw_hosts_collector/: raw_hosts_collector.py
khostman/resources/: blacklist_sources.json  (+1 more)
utils/: os_utils.py  str_utils.py
(+52 files in other folders)
