[metadata]
name = hostsmate
description =
    Anti-malware, ad-blocking, and tracking protection tool that populates and manages the Hosts file.
version = 1.0.0
author = Dmytro Kravchenko
author_email = dmytro_kravchenko@gmx.com
license = MIT
url = https://github.com/kravchenkoda/hostsmate
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Topic :: Security
    Topic :: Internet :: Name Service (DNS)
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Environment :: Console

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10.6

[options.packages.find]
where = src

[options.package_data]
resources =
    *

[options.entry_points]
console_scripts =
    hostsmate = hostsmate_src.execute:main
